# openentropy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README.pypi.md  SECURITY.md  benchmark.py  benchmark_deep.py  install.sh  pyproject.toml  requirements.txt  run_nist_new_sources.py
.github/workflows/: ci.yml  release.yml
analysis/: conditioning.py  deep_entropy_tests.py  entropy_tests.py
crates/esoteric-cli/: Cargo.toml
crates/esoteric-cli/src/: main.rs
crates/esoteric-cli/src/commands/: bench.rs  device.rs  mod.rs  pool.rs  probe.rs  report.rs  scan.rs  server.rs  stream.rs
crates/esoteric-cli/src/tui/: app.rs  ui.rs
crates/esoteric-core/: Cargo.toml
crates/esoteric-core/src/: conditioning.rs  lib.rs  platform.rs  pool.rs  source.rs
crates/esoteric-core/src/sources/: audio.rs  bluetooth.rs  camera.rs  compression.rs  cross_domain.rs  disk.rs  gpu.rs  ioregistry.rs  memory.rs  mod.rs  network.rs  novel.rs  process.rs  sensor.rs  silicon.rs  sysctl.rs  timing.rs  vmstat.rs  wifi.rs
crates/esoteric-core/tests/: integration.rs
crates/esoteric-python/: Cargo.toml
crates/esoteric-python/src/: lib.rs
crates/esoteric-server/: Cargo.toml
crates/esoteric-server/src/: lib.rs
crates/esoteric-tests/: Cargo.toml
crates/esoteric-tests/src/: lib.rs
crates/openentropy-cli/: Cargo.toml  README.md
crates/openentropy-cli/src/: main.rs
crates/openentropy-cli/src/commands/: analyze.rs  bench.rs  device.rs  entropy.rs  mod.rs  monitor.rs  pool.rs  probe.rs  record.rs  report.rs  scan.rs  server.rs  sessions.rs  stream.rs  telemetry.rs
crates/openentropy-cli/src/tui/: app.rs  ui.rs
crates/openentropy-core/: Cargo.toml  README.md  build.rs
crates/openentropy-core/examples/: basic.rs  raw_vs_conditioned.rs  stream_to_file.rs
crates/openentropy-core/src/: analysis.rs  conditioning.rs  lib.rs  measurement.rs  pool.rs  quantum.rs  session.rs  source.rs  telemetry.rs
crates/openentropy-core/src/metrics/: mod.rs  standard.rs  streams.rs  telemetry.rs
crates/openentropy-core/src/metrics/experimental/: mod.rs  quantum_proxy_v3.rs
crates/openentropy-core/src/sources/: audio.rs  bluetooth.rs  camera.rs  compression.rs  cross_domain.rs  disk.rs  frontier.rs  gpu.rs  helpers.rs  ioregistry.rs  memory.rs  mod.rs  network.rs  novel.rs  process.rs  sensor.rs  silicon.rs  sysctl.rs  timing.rs  vmstat.rs  wifi.rs
crates/openentropy-core/src/sources/frontier/: accelerate_jitter.rs  amx_timing.rs  audio_pll_timing.rs  (+22 more)
crates/openentropy-core/tests/: integration.rs
crates/openentropy-python/: Cargo.toml
crates/openentropy-python/src/: lib.rs
crates/openentropy-server/: Cargo.toml  README.md
crates/openentropy-server/src/: lib.rs
crates/openentropy-tests/: Cargo.toml  README.md
crates/openentropy-tests/src/: lib.rs
crates/openentropy-wasm/: Cargo.toml  README.md
crates/openentropy-wasm/src/: lib.rs
docs/: ADDING_SOURCES.md  API.md  ARCHITECTURE.md  CODE_REVIEW.md  CONDITIONING.md  DEEP_SOURCES.md  INTEGRATIONS.md  OLLAMA_INTEGRATION.md  OPEN_SOURCE_AUDIT.md  PYTHON_SDK.md  QUANTUM_BENCHMARK.md  QUANTUM_SOURCES.md  RESEARCH_PLAN.md  RUST_MIGRATION_PLAN.md  SOURCES.md  SOURCE_CATALOG.md  TELEMETRY.md  TROUBLESHOOTING.md
docs/findings/: benchmark_2026-02-11.md  deep_benchmark_2026-02-11.md  deep_disk_io.md  deep_hardware_2026-02-14.md  deep_hardware_breakthrough.md  deep_memory_timing.md  deep_process_table.md  deep_research_2026-02-13.md  level3_silicon.md  mic_thermal_noise_2025-02-11.md  new_sources_integration.md  platform_detection.json  randomness_report_2026-02-11.md  sensor_jitter_2025-02-11.md  thermal_noise_research_2026-02-14.md  unprecedented_entropy_2026-02-14.md  wifi_rssi_2025-02-11.md
esoteric_entropy/: __init__.py  cli.py  conditioning.py  http_server.py  monitor.py  numpy_compat.py  platform.py  pool.py  report.py  stats.py  test_suite.py
esoteric_entropy/sources/: __init__.py  audio.py  base.py  bluetooth.py  camera.py  compression.py  cross_domain.py  disk.py  gpu.py  ioregistry.py  memory.py  network.py  novel.py  process.py  sensor.py  silicon.py  sysctl.py  timing.py  vmstat.py  wifi.py
examples/: README.md
examples/python/: basic.py  named_pipe.py  ollama_integration.py  raw_entropy.py
examples/wasm/: index.html
explore/: README.md  accelerometer_noise.py  ble_ambient_noise.py  camera_dark_current.py  camera_quantum.py  cpu_thermal_jitter.py  cross_domain_beat.py  disk_io_jitter.py  emi_audio_coupling.py  gpu_compute_jitter.py  ioregistry_deep.py  mach_timing_deep.py  memory_timing.py  mic_thermal_noise.py  network_timing.py  novel_sources_probe.py  nvme_smart_jitter.py  overlooked_discovery.py  platform_detect.py  sensor_jitter.py  smc_sensor_galaxy.py  wifi_rssi_entropy.py
openentropy/: __init__.py
research/poc/: .gitignore  arm_counter_divergence.c  audio_pll_jitter.c  coreml_neural_engine.c  cross_correlation.c  dmp_confusion_refined.c  full_audit_2026-02-14.md  full_correlation_audit.c  iokit_sensor_sweep.c  keychain_sep_timing.c  keychain_write_timing.c  memory_prefetcher_confusion.c  poc_coherence_fabric.c  poc_dram_decay.c  poc_frequency_drift.c  poc_mach_voucher.c  poc_metal_gpu.c  poc_numa_asymmetry.c  quality_audit.md  secure_enclave_timing.c  smc_sensor_noise.c  thermal_audio_adc_noise.c  thermal_audio_pll_jitter.c  thermal_denormal_timing.c  thermal_dram_retention.c  thermal_instruction_retirement.c  thermal_smc_adc_lsb.c  thermal_usb_frame_jitter.c  unprecedented_ane_jitter.c  unprecedented_fsync_journal.c  unprecedented_gpu_divergence.m  unprecedented_iosurface_crossing.m  unprecedented_nvme_latency.c  unprecedented_pdn_resonance.c  unprecedented_quantum_boundary.c  unprecedented_thermal_convection.c  validate_amx_timing.c  validate_cache_contention.c  validate_cas_contention.c  validate_compression_timing.c  (+22 more)
scripts/ci/: check_python_source_parity.py
src/: entropy_pool.py
tests/: test_cli.py  test_conditioning.py  test_device.py  test_numpy_compat.py  test_pool.py  test_server.py  test_sources.py  test_stats.py  test_stream.py
(+7 files in other folders)
