[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "esoteric-entropy"
version = "0.3.0"
description = "Your computer is a quantum noise observatory. Harvests entropy from 30 unconventional hardware sources."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Amenti Labs" }]
keywords = ["entropy", "randomness", "hardware", "noise", "TRNG", "security", "QRNG", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/amenti-labs/esoteric-entropy"
Repository = "https://github.com/amenti-labs/esoteric-entropy"
Documentation = "https://github.com/amenti-labs/esoteric-entropy/tree/main/docs"
Issues = "https://github.com/amenti-labs/esoteric-entropy/issues"

[tool.maturin]
manifest-path = "crates/esoteric-python/Cargo.toml"
python-source = "."
module-name = "esoteric_entropy.esoteric_entropy"
features = ["pyo3/extension-module"]
