[package]
name = "esoteric-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core entropy harvesting library — 30 unconventional sources from your computer's physics"

[dependencies]
sha2 = { workspace = true }
flate2 = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
