[package]
name = "esoteric-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Python bindings for esoteric-entropy via PyO3"

[lib]
name = "esoteric_entropy"
crate-type = ["cdylib"]

[dependencies]
esoteric-core = { workspace = true }
esoteric-tests = { workspace = true }
pyo3 = { workspace = true }
