[package]
name = "openentropy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for openentropy — your computer is a hardware noise observatory"
readme = "README.md"

[[bin]]
name = "openentropy"
path = "src/main.rs"

[dependencies]
openentropy-core = { workspace = true }
openentropy-server = { workspace = true }
openentropy-tests = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }
ctrlc = { workspace = true }
serde = { workspace = true }
