[package]
name = "openentropy-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NIST SP 800-22 inspired randomness test battery"
readme = "README.md"

[dependencies]
statrs = { workspace = true }
rustfft = { workspace = true }
flate2 = { workspace = true }
