[package]
name = "openentropy-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly entropy collection using browser APIs — timing jitter, crypto.getRandomValues(), and scheduling noise"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
sha2 = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Performance",
    "Crypto",
    "Window",
]
